# cslam_experiments

./: CMakeLists.txt  README.md  package.xml
config/: graco_lidar.yaml  kitti00_lidar.yaml  kitti360_stereo.yaml  kitti_lidar.yaml  kitti_stereo.yaml  m2dgr.yaml  realsense_rgbd.yaml  s3e_lidar.yaml  s3e_stereo.yaml  s3e_stereo_and_lidar.yaml
config/rendezvous/: graco_ground.config  kitti00_2robots.config  kitti00_2robots_lidar.config  kitti00_5robots.config  kitti09_5robots.config  kitti09_5robots_rdv.config  m2dgr.config  s3e_college.config  s3e_playground.config  s3e_square.config
config/s3e/: alpha.yaml  bob.yaml  carol.yaml
config/zenoh/: zenoh_cslam.json5
cslam_experiments/: publish_stereo_calibration_s3e.py
data/: download.sh
docker/: .gitignore  Dockerfile.lidar  README.md  force_rtps.xml  makefile
docker/bridge/: Dockerfile  entrypoint.sh  makefile
launch/: kitti_2robots_short_lidar.launch.py
launch/cslam/: cslam_lidar.launch.py  cslam_rgbd.launch.py  cslam_stereo.launch.py
launch/datasets_experiments/: README.md  graco_lidar.launch.py  kitti360_lidar.launch.py  kitti360_stereo.launch.py  kitti_lidar.launch.py  kitti_stereo.launch.py  m2dgr_gate.launch.py  s3e_stereo.launch.py  s3e_stereo_and_lidar.launch.py
launch/odometry/: rtabmap_kitti_lidar_odometry.launch.py  rtabmap_kitti_stereo_odometry.launch.py  rtabmap_m2dgr_lidar_odometry.launch.py  rtabmap_ouster_lidar_odometry.launch.py  rtabmap_rgbd_odometry.launch.py  rtabmap_s3e_lidar_odometry.launch.py  rtabmap_s3e_stereo_odometry.launch.py  rtabmap_tum_rgbd_odometry.launch.py
launch/robot_experiments/: .experiment_realsense.launch.py.swp  experiment_lidar.launch.py  experiment_lidar_groupaction.launch.py  experiment_oak-d_rgbd.launch.py  experiment_ouster_realsense.launch.py  experiment_ouster_realsense_scout.launch.py  experiment_ouster_realsense_scout_large.launch.py  experiment_realsense.launch.py  oak-d_rgbd.launch.py  realsense_rgbd.launch.py
launch/sensors/: bag_graco.launch.py  bag_kitti.launch.py  bag_m2dgr.launch.py  bag_s3e.launch.py  oak-d.launch.py  oak-d_description.launch.py  realsense_d400.launch.py  realsense_d400.launch.py.save  realsenses.launch.py
(+2 files in other folders)
